--- a/index.html
+++ b/index.html
@@ -54,7 +54,87 @@
       </div>
 
       <div class="shop-grid">
-        <!-- All your generators (Seb, Michael, Ibrahim, Bobby, Peter, Aarav, Alex, Oscar, Seb Ultimate, Harvey Meth Lab) -->
+        <!-- Generators -->
+        <div class="shop-item card soft">
+          <div class="shop-title">Seb Generator</div>
+          <div class="shop-sub">+1 BB/sec</div>
+          <div class="shop-row">
+            <button id="buySebBtn" class="btn buy-btn">Buy (Cost: 20)</button>
+            <div id="sebOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Michael Generator</div>
+          <div class="shop-sub">+5 BB/sec</div>
+          <div class="shop-row">
+            <button id="buyMichaelBtn" class="btn buy-btn">Buy (Cost: 50)</button>
+            <div id="michaelOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Ibrahim Generator</div>
+          <div class="shop-sub">+10 BB/sec</div>
+          <div class="shop-row">
+            <button id="buyIbrahimBtn" class="btn buy-btn">Buy (Cost: 100)</button>
+            <div id="ibrahimOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Bobby Generator</div>
+          <div class="shop-sub">+100 BB/sec</div>
+          <div class="shop-row">
+            <button id="buyBobbyBtn" class="btn buy-btn">Buy (Cost: 500)</button>
+            <div id="bobbyOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Peter Generator</div>
+          <div class="shop-sub">+3,000 BB/sec</div>
+          <div class="shop-row">
+            <button id="buyPeterBtn" class="btn buy-btn">Buy (Cost: 5,000)</button>
+            <div id="peterOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Aarav Super Mythic Generator</div>
+          <div class="shop-sub">+1000 BB/sec</div>
+          <div class="shop-row">
+            <button id="buyAaravBtn" class="btn buy-btn">Buy (Cost: 10,000)</button>
+            <div id="aaravOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Alex Generator</div>
+          <div class="shop-sub">+10,000 BB/sec</div>
+          <div class="shop-row">
+            <button id="buyAlexBtn" class="btn buy-btn">Buy (Cost: 100,000)</button>
+            <div id="alexOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Oscar Super Rare Generator</div>
+          <div class="shop-sub">+100,000 BB/sec</div>
+          <div class="shop-row">
+            <button id="buyOscarBtn" class="btn buy-btn">Buy (Cost: 1,000,000)</button>
+            <div id="oscarOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Sebastian Kavanagh Ultimate Generator</div>
+          <div class="shop-sub">+10,000,000 BB/sec</div>
+          <div class="shop-row">
+            <button id="buySebUltimateBtn" class="btn buy-btn">Buy (Cost: 1,000,000,000)</button>
+            <div id="sebUltimateOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
+        <div class="shop-item card soft">
+          <div class="shop-title">Harvey Meth Lab Generator</div>
+          <div class="shop-sub">+300,000,000 BB/sec</div>
+          <div class="shop-row">
+            <button id="buyHarveyBtn" class="btn buy-btn">Buy (Cost: 5,000,000,000)</button>
+            <div id="harveyOwned" class="owned">Owned: 0</div>
+          </div>
+        </div>
       </div>
 
       <p id="errorMsg" aria-live="polite"></p>
