--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <button id="closeShopBtn" class="btn icon-btn" aria-label="Close">✕</button>
       </div>
 
+      <!-- 🔹 Shop Generators -->
       <div class="shop-grid">
-        <!-- Generators -->
         <div class="shop-item card soft">
           <div class="shop-title">Seb Generator</div>
           <div class="shop-sub">+1 BB/sec</div>
@@ -63,6 +63,7 @@
             <div id="sebOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Michael Generator</div>
           <div class="shop-sub">+5 BB/sec</div>
@@ -71,6 +72,7 @@
             <div id="michaelOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Ibrahim Generator</div>
           <div class="shop-sub">+10 BB/sec</div>
@@ -79,6 +81,7 @@
             <div id="ibrahimOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Bobby Generator</div>
           <div class="shop-sub">+100 BB/sec</div>
@@ -87,6 +90,7 @@
             <div id="bobbyOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Peter Generator</div>
           <div class="shop-sub">+3,000 BB/sec</div>
@@ -95,6 +99,7 @@
             <div id="peterOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Aarav Super Mythic Generator</div>
           <div class="shop-sub">+1,000 BB/sec</div>
@@ -103,6 +108,7 @@
             <div id="aaravOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Alex Generator</div>
           <div class="shop-sub">+10,000 BB/sec</div>
@@ -111,6 +117,7 @@
             <div id="alexOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Oscar Super Rare Generator</div>
           <div class="shop-sub">+100,000 BB/sec</div>
@@ -119,6 +126,7 @@
             <div id="oscarOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Sebastian Kavanagh Ultimate Generator</div>
           <div class="shop-sub">+10,000,000 BB/sec</div>
@@ -127,6 +135,7 @@
             <div id="sebUltimateOwned" class="owned">Owned: 0</div>
           </div>
         </div>
+
         <div class="shop-item card soft">
           <div class="shop-title">Harvey Meth Lab Generator</div>
           <div class="shop-sub">+300,000,000 BB/sec</div>
