--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <button id="closeShopBtn" class="btn icon-btn" aria-label="Close">✕</button>
       </div>
 
-      <!-- 🔹 Shop Generators -->
       <div class="shop-grid">
+        <!-- Generators -->
         <div class="shop-item card soft">
           <div class="shop-title">Seb Generator</div>
           <div class="shop-sub">+1 BB/sec</div>
@@ -63,7 +63,6 @@
             <div id="sebOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Michael Generator</div>
           <div class="shop-sub">+5 BB/sec</div>
@@ -72,7 +71,6 @@
             <div id="michaelOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Ibrahim Generator</div>
           <div class="shop-sub">+10 BB/sec</div>
@@ -81,7 +79,6 @@
             <div id="ibrahimOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Bobby Generator</div>
           <div class="shop-sub">+100 BB/sec</div>
@@ -90,7 +87,6 @@
             <div id="bobbyOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Peter Generator</div>
           <div class="shop-sub">+3,000 BB/sec</div>
@@ -99,7 +95,6 @@
             <div id="peterOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Aarav Super Mythic Generator</div>
           <div class="shop-sub">+1,000 BB/sec</div>
@@ -108,7 +103,6 @@
             <div id="aaravOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Alex Generator</div>
           <div class="shop-sub">+10,000 BB/sec</div>
@@ -117,7 +111,6 @@
             <div id="alexOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Oscar Super Rare Generator</div>
           <div class="shop-sub">+100,000 BB/sec</div>
@@ -126,7 +119,6 @@
             <div id="oscarOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Sebastian Kavanagh Ultimate Generator</div>
           <div class="shop-sub">+10,000,000 BB/sec</div>
@@ -135,7 +127,6 @@
             <div id="sebUltimateOwned" class="owned">Owned: 0</div>
           </div>
         </div>
-
         <div class="shop-item card soft">
           <div class="shop-title">Harvey Meth Lab Generator</div>
           <div class="shop-sub">+300,000,000 BB/sec</div>
