--- a/index.html
+++ b/index.html
@@ -51,9 +51,100 @@
     </footer>
 
     <!-- Shop Modal -->
-    <!-- (unchanged, keeping your shop + leaderboard code) -->
+    <div id="shop" class="shop-backdrop" aria-hidden="true">
+      <div class="shop-modal card">
+        <div class="shop-header">
+          <h2>Shop</h2>
+          <button id="closeShopBtn" class="btn icon-btn" aria-label="Close">✕</button>
+        </div>
 
-    <!-- Firebase + Script -->
+        <div class="shop-grid">
+          <div class="shop-item card soft">
+            <div class="shop-title">Seb Generator</div>
+            <div class="shop-sub">+1 BB/sec</div>
+            <div class="shop-row">
+              <button id="buySebBtn" class="btn buy-btn">Buy (Cost: 20)</button>
+              <div id="sebOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Michael Generator</div>
+            <div class="shop-sub">+5 BB/sec</div>
+            <div class="shop-row">
+              <button id="buyMichaelBtn" class="btn buy-btn">Buy (Cost: 50)</button>
+              <div id="michaelOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Ibrahim Generator</div>
+            <div class="shop-sub">+10 BB/sec</div>
+            <div class="shop-row">
+              <button id="buyIbrahimBtn" class="btn buy-btn">Buy (Cost: 100)</button>
+              <div id="ibrahimOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Bobby Generator</div>
+            <div class="shop-sub">+10 BB/sec</div>
+            <div class="shop-row">
+              <button id="buyBobbyBtn" class="btn buy-btn">Buy (Cost: 500)</button>
+              <div id="bobbyOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Aarav Super Mythic Generator</div>
+            <div class="shop-sub">+1000 BB/sec</div>
+            <div class="shop-row">
+              <button id="buyAaravBtn" class="btn buy-btn">Buy (Cost: 10000)</button>
+              <div id="aaravOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+        </div>
+
+        <p id="errorMsg" aria-live="polite"></p>
+      </div>
+    </div>
+
+    <!-- Leaderboard Modal -->
+    <div id="leaderboardBackdrop" class="lb-backdrop" aria-hidden="true">
+      <div class="lb-modal card">
+        <div class="shop-header">
+          <h2>Leaderboard</h2>
+          <button id="closeLeaderboardBtn" class="btn icon-btn" aria-label="Close">✕</button>
+        </div>
+
+        <div id="nameRow" class="name-row">
+          <input id="playerNameInput" class="input" placeholder="Enter your name" maxlength="24"/>
+          <button id="saveNameBtn" class="btn">Save</button>
+        </div>
+        <p id="youAre" class="you-are hidden"></p>
+
+        <ol id="leaderboardList" class="lb-list"></ol>
+
+        <div class="name-actions">
+          <button id="deleteNameBtn" class="btn">Remove Me</button>
+        </div>
+
+        <p id="leaderboardHint" class="shop-hint">
+          Leaderboard updates every ~10s or when your score changes.
+        </p>
+      </div>
+    </div>
+
+    <!-- Audio -->
+    <audio id="drumroll" src="drumroll.mp3"></audio>
+    <audio id="sebastianAudio" src="sebastian.mp3"></audio>
+    <audio id="michaelAudio" src="michael.mp3"></audio>
+    <audio id="ibrahimAudio" src="ibrahim.mp3"></audio>
+    <audio id="bobbyAudio" src="bobby.mp3"></audio>
+    <audio id="peterAudio" src="peter.mp3"></audio>
+    <audio id="aaravAudio" src="aarav.mp3"></audio>
+
+    <!-- Firebase (Compat) -->
     <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore-compat.js"></script>
     <script>
@@ -69,6 +160,8 @@
       firebase.initializeApp(firebaseConfig);
       window._db = firebase.firestore();
     </script>
+
+    <!-- Game Logic -->
     <script src="script.js"></script>
   </body>
 </html>
